--- a/vuejs-vite/package.json
+++ b/vuejs-vite/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "sass": "^1.85.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
